Table captions on top

--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -406,14 +406,16 @@ Figure \ref{fig:bunchansgts} shows several different configurations of the NSGT 
 
 \begin{table}[ht]
 	\centering
-\begin{tabular}{ |l|l|p{9cm}| }
+	\caption{Different frequencies and Q factors for various NSGT scales}
+	\label{table:nsgtfreqsandqs}
+\begin{tabular}{ |l|l|p{10cm}| }
 	 \hline
 	 Scale & Bins & First 5 frequency bins \\
 	 \hline
 	 \hline
 	 Constant-Q & 100 & 20.00, 21.47, 23.04, 24.73, 26.54 \\
 	 \hline
-	 Variable-Q (+15 Hz) & 100 & 35.00, 36.47, 38.04, 39.73, 41.54 \\
+	 Variable-Q & 100 & 35.00, 36.47, 38.04, 39.73, 41.54 \\
 	 \hline
 	 mel & 100 & 20.00, 45.56, 72.02, 99.42, 127.80 \\
 	 \hline
@@ -421,7 +423,7 @@ Figure \ref{fig:bunchansgts} shows several different configurations of the NSGT 
 	 \hline
 	 Constant-Q & 500 & 20.00, 20.28, 20.57, 20.86, 21.16 \\
 	 \hline
-	 Variable-Q (+15 Hz) & 500 & 35.00, 35.28, 35.57, 35.86, 36.16 \\
+	 Variable-Q & 500 & 35.00, 35.28, 35.57, 35.86, 36.16 \\
 	 \hline
 	 mel & 500 & 20.00, 25.00, 30.03, 35.10, 40.21 \\
 	 \hline
@@ -429,14 +431,14 @@ Figure \ref{fig:bunchansgts} shows several different configurations of the NSGT 
 	 \hline
 \end{tabular}\\
 \vspace{1em}
-\begin{tabular}{ |l|l|p{9cm}| }
+\begin{tabular}{ |l|l|p{10cm}| }
 	 \hline
 	 Scale & Bins & Last 5 frequency bins \\
 	 \hline
 	 \hline
 	 Constant-Q & 100 & 16,614.38, 17,832.63, 19,140.20, 20,543.64, 22,050.00 \\
 	 \hline
-	 Variable-Q (+15 Hz) & 100 & 16,629.38, 17,847.63, 19,155.20, 20,558.64, 22,065.00 \\
+	 Variable-Q & 100 & 16,629.38, 17,847.63, 19,155.20, 20,558.64, 22,065.00 \\
 	 \hline
 	 mel & 100 & 19,087.44, 19,789.79, 20,517.07, 21,270.17, 22,050.00 \\
 	 \hline
@@ -444,7 +446,7 @@ Figure \ref{fig:bunchansgts} shows several different configurations of the NSGT 
 	 \hline
 	 Constant-Q & 500 & 20,845.91, 21,140.62, 21,439.50, 21,742.61, 22,050.00 \\
 	 \hline
-	 Variable-Q (+15 Hz) & 500 & 20,860.91, 21,155.62, 21,454.50, 21,757.61, 22,065.00 \\
+	 Variable-Q & 500 & 20,860.91, 21,155.62, 21,454.50, 21,757.61, 22,065.00 \\
 	 \hline
 	 mel & 500 & 21,428.92, 21,582.58, 21,737.31, 21,893.11, 22,050.00 \\
 	 \hline
@@ -452,14 +454,14 @@ Figure \ref{fig:bunchansgts} shows several different configurations of the NSGT 
 	 \hline
 \end{tabular}\\
 \vspace{1em}
-\begin{tabular}{ |l|l|p{9cm}| }
+\begin{tabular}{ |l|l|p{10cm}| }
 	 \hline
 	 Scale & Bins & First 5 Q factors \\
 	 \hline
 	 \hline
 	 Constant-Q & 100 & 7.06, 7.06, 7.06, 7.06, 7.06  \\
 	 \hline
-	 Variable-Q (+15 Hz) & 100 & 12.37, 12.00, 11.67, 11.35, 11.06 \\
+	 Variable-Q & 100 & 12.37, 12.00, 11.67, 11.35, 11.06 \\
 	 \hline
 	 mel & 100 & 0.40, 0.88, 1.34, 1.78, 2.21 \\
 	 \hline
@@ -467,7 +469,7 @@ Figure \ref{fig:bunchansgts} shows several different configurations of the NSGT 
 	 \hline
 	 Constant-Q & 500 & 35.62, 35.62, 35.62, 35.62, 35.62 \\
 	 \hline
-	 Variable-Q (+15 Hz) & 500 & 62.33, 61.96, 61.59, 61.23, 60.87 \\
+	 Variable-Q & 500 & 62.33, 61.96, 61.59, 61.23, 60.87 \\
 	 \hline
 	 mel & 500 & 2.01, 2.49, 2.97, 3.45, 3.92 \\
 	 \hline
@@ -475,14 +477,14 @@ Figure \ref{fig:bunchansgts} shows several different configurations of the NSGT 
 	 \hline
 \end{tabular}\\
 \vspace{1em}
-\begin{tabular}{ |l|l|p{9cm}| }
+\begin{tabular}{ |l|l|p{10cm}| }
 	 \hline
 	 Scale & Bins & Last 5 Q factors \\
 	 \hline
 	 \hline
 	 Constant-Q & 100 & 7.06, 7.06, 7.06, 7.06, 7.06  \\
 	 \hline
-	 Variable-Q (+15 Hz) & 100 & 7.07, 7.07, 7.07, 7.07, 7.07 \\
+	 Variable-Q & 100 & 7.07, 7.07, 7.07, 7.07, 7.07 \\
 	 \hline
 	 mel & 100 & 13.83, 13.85, 13.86, 13.88, 13.89 \\
 	 \hline
@@ -490,15 +492,13 @@ Figure \ref{fig:bunchansgts} shows several different configurations of the NSGT 
 	 \hline
 	 Constant-Q & 500 & 35.62, 35.62, 35.62, 35.62, 35.62 \\
 	 \hline
-	 Variable-Q (+15 Hz) & 500 & 35.64, 35.64, 35.64, 35.64, 35.64 \\
+	 Variable-Q & 500 & 35.64, 35.64, 35.64, 35.64, 35.64 \\
 	 \hline
 	 mel & 500 & 69.97, 69.98, 70.00, 70.02, 70.03 \\
 	 \hline
 	 Bark & 500 & 58.49, 58.49, 58.49, 58.49, 58.49 \\
 	 \hline
 \end{tabular}
-	\caption{Different frequencies and Q factors for various NSGT scales, 20-22,050 Hz}
-	\label{table:nsgtfreqsandqs}
 \end{table}
 
 \newpagefill
