--- a/latex/report.tex
+++ b/latex/report.tex
@@ -18,7 +18,7 @@
 \usemintedstyle{github}
 \usepackage{subfig}
 \usepackage{titling}
-\usepackage[compatibility=false]{caption}
+\usepackage[compatibility=false,tableposition=top]{caption}
 \usepackage[parfill]{parskip}
 \setlength{\droptitle}{1cm}
 \usepackage{hyperref}
